syntax = "proto3";
package hello;

message HelloMessage {
  int32 id=1;
  string message=2;
};
message HelloRequest {
  int32 id=1;
  string name=2;
};
message Void {}
service HelloService {
  rpc EchoHello (HelloRequest) returns (HelloMessage);
}

